# correlative-scan-matching

./: .gitignore  CMakeLists.txt  Makefile  README.md  get_unique_timestamps_from_uncertainty_stats.py  manifest.xml  uncertain_timetsamps_visualizer.py
msg/: CorrScanMatchInputMsg.msg
src/: CImg.h  CorrelativeScanMatcher.cc  CorrelativeScanMatcher.h  ScanMatcher.cc  ScanMatcher.h  bag_avg_matcher.cc  bag_pair_matcher.cc  main.cc  math_util.h  pointcloud_helpers.cc  pointcloud_helpers.h  ros_topic_matcher.cc
src/CorrelativeSCanMatching/msg/: _CorrScanMatchInputMsg.py
src/CorrelativeScanMatcher/msg/: _CorrScanMatchInputMsg.py  __init__.py
src/CorrelativeScanMatching/msg/: _CorrScanMatchInputMsg.py
test/: CMakeLists.txt  correlative_scan_matcher_tests.cc
