macro(package_add_test TESTNAME)
    add_executable(${TESTNAME} ${ARGN})
    target_link_libraries(${TESTNAME} gtest.a pthread glog gtest_main.a X11)
    add_test(NAME ${TESTNAME} COMMAND ${TESTNAME})
    set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
    add_dependencies(${TESTNAME} ${catkin_EXPORTED_TARGETS})
endmacro()

if (CATKIN_ENABLED_TESTING)
  catkin_add_gtest(correlative_scan_matcher_tests correlative_scan_matcher_tests.cc ../src/CorrelativeScanMatcher.cc)
  target_link_libraries(correlative_scan_matcher ${catkin_LIBRARIES})
  add_dependencies(correlative_scan_matcher ${catkin_EXPORTED_TARGETS})
else()
  package_add_test(correlative_scan_matcher_tests correlative_scan_matcher_tests.cc ../src/CorrelativeScanMatcher.cc)
endif()
